更新 build-kernel-alioth.yml

--- a/.github/workflows/build-kernel-alioth.yml
+++ b/.github/workflows/build-kernel-alioth.yml
@@ -18,67 +18,61 @@ jobs:
           curl clang lld llvm build-essential \
           libncurses-dev bison bc flex libssl-dev \
           libelf-dev rsync kmod git cpio wget zip \
-          unzip python3 make xz-utils
+          unzip python3 python-is-python3 make xz-utils
 
-    - name: Download and setup Linaro GCC 7.5.0 toolchains
+    - name: Download and setup GCC 4.9.0 toolchains
       run: |
         # 创建工具链目录
         sudo mkdir -p /opt/toolchains
         sudo chmod 777 /opt/toolchains
         
-        echo "=== 下载 Linaro AArch64 GCC 7.5.0 ==="
-        wget -q https://releases.linaro.org/components/toolchain/binaries/7.5-2019.12/aarch64-linux-gnu/gcc-linaro-7.5.0-2019.12-x86_64_aarch64-linux-gnu.tar.xz
-        tar -xf gcc-linaro-7.5.0-2019.12-x86_64_aarch64-linux-gnu.tar.xz -C /opt/toolchains/
+        echo "=== AArch64 GCC 4.9.0 ==="
+        wget https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/+archive/refs/heads/master.tar.gz -O aarch64-linux-android-4.9.tar.gz
+        mkdir aarch64-linux-android-4.9
+        tar -xvf aarch64-linux-android-4.9.tar.gz -C aarch64-linux-android-4.9
         
-        echo "=== 下载 Linaro ARM GCC 7.5.0 ==="
-        wget -q https://releases.linaro.org/components/toolchain/binaries/7.5-2019.12/arm-linux-gnueabi/gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabi.tar.xz
-        tar -xf gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabi.tar.xz -C /opt/toolchains/
+        echo "=== ARM GCC 4.9.0 ==="
+        wget https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/+archive/refs/heads/master.tar.gz -O arm-linux-androideabi-4.9.tar.gz
+        mkdir arm-linux-androideabi-4.9
+        tar -xvf arm-linux-androideabi-4.9.tar.gz -C arm-linux-androideabi-4.9
         
         echo "=== 验证工具链版本 ==="
-        /opt/toolchains/gcc-linaro-7.5.0-2019.12-x86_64_aarch64-linux-gnu/bin/aarch64-linux-gnu-gcc --version | head -1
-        /opt/toolchains/gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabi/bin/arm-linux-gnueabi-gcc --version | head -1
-        
-    - name: Clone anykernel3 repository
-      run: |
-        git clone https://github.com/LeeHe-gif/AnyKernel3.git anykernel3
-        cd anykernel3
-        sed -i 's/is_slot_device=0/is_slot_device=1/' anykernel.sh
-        sed -i 's/kernel.string=polaris_docker_Kernel-arrow11-by_LeeHe/kernel.string=alioth_docker_Kernel-arrow12.1-by_LeeHe/' anykernel.sh
-
+        /opt/toolchains/aarch64-linux-android-4.9bin/aarch64-linux-gnu-gcc --version | head -1
+        /opt/toolchains/arm-linux-androideabi-4.9/bin/arm-linux-gnueabi-gcc --version | head -1
         
     - name: Clone kernel source and setup KernelSU
       run: |
-        git clone https://github.com/LeeHe-gif/android_kernel_xiaomi_alioth.git
+        git clone https://github.com/LeeHe-gif/android_kernel_xiaomi_sm8250.git
                 
-    - name: Build kernel with Linaro GCC 7.5.0
+    - name: Build kernel with Linaro GCC 4.9.0
       run: |
-        cp build1.sh android_kernel_xiaomi_alioth/
-        cd android_kernel_xiaomi_alioth
+        cp build1.sh android_kernel_xiaomi_sm8250/
+        cd android_kernel_xiaomi_sm8250
         chmod 755 build1.sh
         ./build1.sh
         ls -la out/arch/arm64/boot/Image.gz-dtb
         
     - name: Verify build output
       run: |
-        if [ -f "android_kernel_xiaomi_alioth/out/arch/arm64/boot/Image.gz-dtb" ]; then
+        if [ -f "android_kernel_xiaomi_sm8250/out/arch/arm64/boot/Image.gz-dtb" ]; then
           echo "✅ 内核编译成功"
-          ls -la android_kernel_xiaomi_alioth/out/arch/arm64/boot/Image.gz-dtb
+          ls -la android_kernel_xiaomi_sm8250/out/arch/arm64/boot/Image.gz-dtb
           echo "文件大小:"
-          du -h android_kernel_xiaomi_alioth/out/arch/arm64/boot/Image.gz-dtb
+          du -h android_kernel_xiaomi_sm8250/out/arch/arm64/boot/Image.gz-dtb
         else
           echo "❌ 内核编译失败，Image.gz-dtb 文件未找到"
           echo "搜索相关文件:"
-          find android_kernel_xiaomi_alioth/out/ -name "Image*" -type f 2>/dev/null || echo "未找到任何 Image 文件"
+          find android_kernel_xiaomi_sm8250/out/ -name "Image*" -type f 2>/dev/null || echo "未找到任何 Image 文件"
           exit 1
         fi
         
     - name: Create anykernel3 package
       run: |
         # 复制内核镜像到 anykernel3 目录
-        cp android_kernel_xiaomi_alioth/out/arch/arm64/boot/Image.gz-dtb anykernel3/
+        cp android_kernel_xiaomi_sm8250/out/arch/arm64/boot/Image.gz-dtb android_kernel_xiaomi_sm8250/AnyKernel3/
         
         # 进入 anykernel3 目录并创建刷机包
-        cd anykernel3/
+        cd android_kernel_xiaomi_sm8250/AnyKernel3/
         zip -r alioth_dockerkernel.zip anykernel.sh Image.gz-dtb LICENSE META-INF modules patch tools README.md
         
         # 验证刷机包是否创建成功
@@ -94,7 +88,7 @@ jobs:
         
     - name: Create out directory archive
       run: |
-        cd android_kernel_xiaomi_alioth
+        cd android_kernel_xiaomi_sm8250
         zip -r kernel_boot_directory.zip out/arch/arm64/boot
         
     - name: Upload artifacts
@@ -102,25 +96,19 @@ jobs:
       with:
         name: kernel-build-artifacts
         path: |
-          anykernel3/polaris_dockerkernel.zip
-          android_kernel_xiaomi_alioth/kernel_boot_directory.zip
+          android_kernel_xiaomi_sm8250/AnyKernel3/polaris_dockerkernel.zip
+          android_kernel_xiaomi_sm8250/kernel_boot_directory.zip
         retention-days: 30
 
     - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
         tag_name: "alioth-kernel-build"  # 添加固定的 tag 名称
-        name: "alioth Docker Kernel Build (GCC 7.5.0)"
+        name: "alioth Docker Kernel Build (GCC 4.9.0)"
         body: |
           # alioth Docker Kernel Build
           
-          使用 Linaro GCC 7.5.0 编译的小米 MIX 2S (polaris) 内核
-          
-          ## 编译环境：
-          - **编译器**: Linaro GCC 7.5.0
-          - **AArch64 工具链**: gcc-linaro-7.5.0-2019.12
-          - **ARM32 工具链**: gcc-linaro-7.5.0-2019.12
-          - **LLVM/Clang**: 系统自带 + LLVM IAS
+          使用 GCC 4.9.0 编译的红米k40 crdoird15 内核
           
           ## 包含文件：
           - `alioth_dockerkernel.zip` - AnyKernel3 刷机包
@@ -128,7 +116,7 @@ jobs:
           
           ## 特性：
           - ✅ 完整 Docker 容器支持
-          - ✅ 基于 Arrow OS 12.1 内核源码
+          - ✅ 基于 CRDoird 15 内核源码
           - ✅ 优化性能和稳定性
           
           ## 刷机说明：
@@ -141,7 +129,7 @@ jobs:
         draft: false
         prerelease: false
         files: |
-          anykernel3/alioth_dockerkernel.zip
-          android_kernel_xiaomi_alioth/kernel_boot_directory.zip
+          android_kernel_xiaomi_sm8250/AnyKernel3/alioth_dockerkernel.zip
+          android_kernel_xiaomi_sm8250/kernel_boot_directory.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
