--- a/.github/workflows/build-kernel-alioth.yml
+++ b/.github/workflows/build-kernel-alioth.yml
@@ -42,7 +42,7 @@ jobs:
         
     - name: Clone kernel source and setup KernelSU
       run: |
-        git clone https://github.com/LeeHe-gif/android_kernel_xiaomi_sm8250.git
+        git clone -b 15.0-alioth --depth 1 https://github.com/LeeHe-gif/android_kernel_xiaomi_sm8250.git
                 
     - name: Build kernel with Linaro GCC 4.9.0
       run: |
