更新 build-kernel-alioth.yml

--- a/.github/workflows/build-kernel-alioth.yml
+++ b/.github/workflows/build-kernel-alioth.yml
@@ -27,17 +27,13 @@ jobs:
         sudo chmod 777 /opt/toolchains
         
         echo "=== AArch64 GCC 4.9.0 ==="
-        wget https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/+archive/refs/heads/master.tar.gz -O aarch64-linux-android-4.9.tar.gz
-        mkdir aarch64-linux-android-4.9
-        tar -xvf aarch64-linux-android-4.9.tar.gz -C aarch64-linux-android-4.9
+        git clone https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9.git --depth=1 aarch64-linux-android-4.9
         
         echo "=== ARM GCC 4.9.0 ==="
-        wget https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/+archive/refs/heads/master.tar.gz -O arm-linux-androideabi-4.9.tar.gz
-        mkdir arm-linux-androideabi-4.9
-        tar -xvf arm-linux-androideabi-4.9.tar.gz -C arm-linux-androideabi-4.9
+        git clone https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_arm-linux-androideabi-4.9.git --depth=1 arm-linux-androideabi-4.9
         
         echo "=== 验证工具链版本 ==="
-        /opt/toolchains/aarch64-linux-android-4.9bin/aarch64-linux-gnu-gcc --version | head -1
+        /opt/toolchains/aarch64-linux-android-4.9/bin/aarch64-linux-gnu-gcc --version | head -1
         /opt/toolchains/arm-linux-androideabi-4.9/bin/arm-linux-gnueabi-gcc --version | head -1
         
     - name: Clone kernel source and setup KernelSU
