--- a/.github/workflows/build-kernel-alioth.yml
+++ b/.github/workflows/build-kernel-alioth.yml
@@ -20,21 +20,23 @@ jobs:
           libelf-dev rsync kmod git cpio wget zip \
           unzip python3 python-is-python3 make xz-utils
 
-    - name: Download and setup GCC 4.9.0 toolchains
+        - name: Download and setup Linaro GCC 7.5.0 toolchains
       run: |
         # 创建工具链目录
         sudo mkdir -p /opt/toolchains
         sudo chmod 777 /opt/toolchains
         
-        echo "=== AArch64 GCC 4.9.0 ==="
-        git clone https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9.git --depth=1 aarch64-linux-android-4.9
+        echo "=== 下载 Linaro AArch64 GCC 7.5.0 ==="
+        wget -q https://releases.linaro.org/components/toolchain/binaries/7.5-2019.12/aarch64-linux-gnu/gcc-linaro-7.5.0-2019.12-x86_64_aarch64-linux-gnu.tar.xz
+        tar -xf gcc-linaro-7.5.0-2019.12-x86_64_aarch64-linux-gnu.tar.xz -C /opt/toolchains/
         
-        echo "=== ARM GCC 4.9.0 ==="
-        git clone https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_arm-linux-androideabi-4.9.git --depth=1 arm-linux-androideabi-4.9
+        echo "=== 下载 Linaro ARM GCC 7.5.0 ==="
+        wget -q https://releases.linaro.org/components/toolchain/binaries/7.5-2019.12/arm-linux-gnueabi/gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabi.tar.xz
+        tar -xf gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabi.tar.xz -C /opt/toolchains/
         
         echo "=== 验证工具链版本 ==="
-        /opt/toolchains/aarch64-linux-android-4.9/bin/aarch64-linux-gnu-gcc --version | head -1
-        /opt/toolchains/arm-linux-androideabi-4.9/bin/arm-linux-gnueabi-gcc --version | head -1
+        /opt/toolchains/gcc-linaro-7.5.0-2019.12-x86_64_aarch64-linux-gnu/bin/aarch64-linux-gnu-gcc --version | head -1
+        /opt/toolchains/gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabi/bin/arm-linux-gnueabi-gcc --version | head -1
         
     - name: Clone kernel source and setup KernelSU
       run: |
