--- a/.github/workflows/build-kernel-alioth.yml
+++ b/.github/workflows/build-kernel-alioth.yml
@@ -41,6 +41,8 @@ jobs:
     - name: Clone kernel source and setup KernelSU
       run: |
         git clone -b 15.0-alioth --depth 1 https://github.com/LeeHe-gif/android_kernel_xiaomi_sm8250.git
+        cd android_kernel_xiaomi_sm8250
+        curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
                 
     - name: Build kernel with Linaro GCC 4.9.0
       run: |
