--- a/.github/workflows/build-kernel-alioth.yml
+++ b/.github/workflows/build-kernel-alioth.yml
@@ -20,31 +20,23 @@ jobs:
           libelf-dev rsync kmod git cpio wget zip \
           unzip python3 python-is-python3 make xz-utils
 
-    - name: Download and setup Linaro GCC 7.5.0 toolchains
+    - name: Download and setup proton-clang-13.0 toolchains
       run: |
         # 创建工具链目录
-        sudo mkdir -p /opt/toolchains
-        sudo chmod 777 /opt/toolchains
-        
-        echo "=== 下载 Linaro AArch64 GCC 7.5.0 ==="
-        wget -q https://releases.linaro.org/components/toolchain/binaries/7.5-2019.12/aarch64-linux-gnu/gcc-linaro-7.5.0-2019.12-x86_64_aarch64-linux-gnu.tar.xz
-        tar -xf gcc-linaro-7.5.0-2019.12-x86_64_aarch64-linux-gnu.tar.xz -C /opt/toolchains/
-        
-        echo "=== 下载 Linaro ARM GCC 7.5.0 ==="
-        wget -q https://releases.linaro.org/components/toolchain/binaries/7.5-2019.12/arm-linux-gnueabi/gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabi.tar.xz
-        tar -xf gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabi.tar.xz -C /opt/toolchains/
-        
-        echo "=== 验证工具链版本 ==="
-        /opt/toolchains/gcc-linaro-7.5.0-2019.12-x86_64_aarch64-linux-gnu/bin/aarch64-linux-gnu-gcc --version | head -1
-        /opt/toolchains/gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabi/bin/arm-linux-gnueabi-gcc --version | head -1
-        
+        sudo mkdir -p /opt
+        sudo chmod 777 /opt
+        cd /opt
+        wget https://github.com/kdrag0n/proton-clang/archive/refs/tags/20210522.tar.gz
+        tar -xf 20210522.tar.gz
+        ls
+
     - name: Clone kernel source and setup KernelSU
       run: |
         git clone -b 15.0-alioth --depth 1 https://github.com/LeeHe-gif/android_kernel_xiaomi_sm8250.git
         cd android_kernel_xiaomi_sm8250
         curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
                 
-    - name: Build kernel with Linaro GCC 4.9.0
+    - name: Build kernel with proton-clang-13.0
       run: |
         cp build1.sh android_kernel_xiaomi_sm8250/
         cd android_kernel_xiaomi_sm8250
