更新 build-kernel-alioth.yml

--- a/.github/workflows/build-kernel-alioth.yml
+++ b/.github/workflows/build-kernel-alioth.yml
@@ -28,6 +28,7 @@ jobs:
         cd /opt
         wget https://github.com/kdrag0n/proton-clang/archive/refs/tags/20210522.tar.gz
         tar -xf 20210522.tar.gz
+        sudo chmod 777 proton-clang-20210522
         ls
 
     - name: Clone kernel source and setup KernelSU
