--- a/.github/workflows/build-kernel-alioth.yml
+++ b/.github/workflows/build-kernel-alioth.yml
@@ -23,21 +23,9 @@ jobs:
     - name: Download and setup proton-clang-13.0 toolchains
       run: |
         # 创建工具链目录
-        sudo mkdir -p /opt/toolchains
+        sudo mkdir -p /opt
         sudo chmod 777 /opt
-
-        echo "=== 下载 Linaro AArch64 GCC 7.5.0 ==="
-        wget -q https://releases.linaro.org/components/toolchain/binaries/7.5-2019.12/aarch64-linux-gnu/gcc-linaro-7.5.0-2019.12-x86_64_aarch64-linux-gnu.tar.xz
-        tar -xf gcc-linaro-7.5.0-2019.12-x86_64_aarch64-linux-gnu.tar.xz -C /opt/toolchains/
-        
-        echo "=== 下载 Linaro ARM GCC 7.5.0 ==="
-        wget -q https://releases.linaro.org/components/toolchain/binaries/7.5-2019.12/arm-linux-gnueabi/gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabi.tar.xz
-        tar -xf gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabi.tar.xz -C /opt/toolchains/
-        
-        echo "=== 验证工具链版本 ==="
-        /opt/toolchains/gcc-linaro-7.5.0-2019.12-x86_64_aarch64-linux-gnu/bin/aarch64-linux-gnu-gcc --version | head -1
-        /opt/toolchains/gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabi/bin/arm-linux-gnueabi-gcc --version | head -1
-        cd /opt
+        git clone https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9.git --depth=1 aarch64-linux-android-4.9
         wget https://github.com/kdrag0n/proton-clang/archive/refs/tags/20210522.tar.gz
         tar -xf 20210522.tar.gz
         sudo chmod 777 proton-clang-20210522
