--- a/.github/workflows/build-kernel-alioth.yml
+++ b/.github/workflows/build-kernel-alioth.yml
@@ -25,6 +25,7 @@ jobs:
         # 创建工具链目录
         sudo mkdir -p /opt
         sudo chmod 777 /opt
+        cd /opt
         git clone https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9.git --depth=1 aarch64-linux-android-4.9
         git clone https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_arm-linux-androideabi-4.9.git --depth=1 arm-linux-androideabi-4.9
         wget https://github.com/kdrag0n/proton-clang/archive/refs/tags/20210522.tar.gz
