--- a/.github/workflows/build-kernel-alioth.yml
+++ b/.github/workflows/build-kernel-alioth.yml
@@ -16,7 +16,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y \
           curl build-essential \
-          libncurses-dev bison bc flex libssl-dev \
+          libncurses-dev bison bc flex libssl-dev gcc-aarch64-linux-gnu gcc-arm-linux-gnu \
           libelf-dev rsync kmod git cpio wget zip \
           unzip python3 python-is-python3 make xz-utils python3-pip ccache rsync
 
@@ -26,12 +26,8 @@ jobs:
         sudo mkdir -p /opt
         sudo chmod 777 /opt
         cd /opt
-        git clone https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9.git --depth=1 aarch64-linux-android-4.9
-        git clone https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_arm-linux-androideabi-4.9.git --depth=1 arm-linux-androideabi-4.9
         wget https://github.com/kdrag0n/proton-clang/archive/refs/tags/20210522.tar.gz
         tar -xf 20210522.tar.gz
-        sudo chmod 777 aarch64-linux-android-4.9
-        sudo chmod 777 arm-linux-androideabi-4.9
         sudo chmod 777 proton-clang-20210522
         ls
         ls aarch64-linux-android-4.9/
