--- a/.github/workflows/build-kernel-alioth.yml
+++ b/.github/workflows/build-kernel-alioth.yml
@@ -16,7 +16,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y \
           curl build-essential \
-          libncurses-dev bison bc flex libssl-dev gcc-aarch64-linux-gnu gcc-arm-linux-gnu \
+          libncurses-dev bison bc flex libssl-dev gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi \
           libelf-dev rsync kmod git cpio wget zip \
           unzip python3 python-is-python3 make xz-utils python3-pip ccache rsync
 
