--- a/.github/workflows/build-arrowos11-kernel-alioth.yml
+++ b/.github/workflows/build-arrowos11-kernel-alioth.yml
@@ -42,14 +42,14 @@ jobs:
         
         # 进入 anykernel3 目录并创建刷机包
         cd AnyKernel3/
-        zip -r alioth_aw11-dockerkernel.zip anykernel.sh Image.gz-dtb LICENSE META-INF modules patch tools README.md
+        zip -r alioth_aw12-1-dockerkernel.zip anykernel.sh Image.gz-dtb LICENSE META-INF modules patch tools README.md
 
         # 验证刷机包是否创建成功
-        if [ -f "alioth_aw11-dockerkernel.zip" ]; then
+        if [ -f "alioth_aw12-1-dockerkernel.zip" ]; then
           echo "✅ anykernel3 包创建成功"
-          ls -la alioth_aw11-dockerkernel.zip
+          ls -la alioth_aw12-1-dockerkernel.zip
           echo "刷机包大小:"
-          du -h alioth_aw11-dockerkernel.zip
+          du -h alioth_aw12-1-dockerkernel.zip
         else
           echo "❌ anykernel3 包创建失败"
           exit 1
@@ -65,7 +65,7 @@ jobs:
       with:
         name: kernel-build-artifacts
         path: |
-          AnyKernel3/alioth_aw11-dockerkernel.zip
+          AnyKernel3/alioth_aw12-1-dockerkernel.zip
           android_kernel_xiaomi_alioth/kernel_boot_directory.zip
         retention-days: 30
 
@@ -78,24 +78,25 @@ jobs:
           # alioth Docker Kernel Build
           
           ## 包含文件：
-          - `alioth_aw11-dockerkernel.zip` - AnyKernel3 刷机包
+          - `alioth_aw12-1-dockerkernel.zip` - AnyKernel3 刷机包
           - `kernel_boot_directory.zip` - 完整的编译输出目录
           
           ## 特性：
           - ✅ 完整 Docker 容器支持
-          - ✅ 基于 arrowos 12.1 内核源码
+          - ✅ 基于 (arrowos 12.1)[https://github.com/LeeHe-gif/android_kernel_xiaomi_alioth] 内核源码
           
           ## 刷机说明：
-          1. 下载 `alioth_aw11-dockerkernel.zip`
+          1. 下载 `alioth_aw12-1-dockerkernel.zip`
           2. 通过 TWRP Recovery 刷入
+          3. 刷入magsik
           3. 重启设备
-          4. 安装 KernelSU Manager 应用管理 root 权限
+          4. 安装 Magisk 应用管理 root 权限
           
           **注意：** 刷机前请备份重要数据。
         draft: false
         prerelease: false
         files: |
-          AnyKernel3/alioth_aw11-dockerkernel.zip
+          AnyKernel3/alioth_aw12-1-dockerkernel.zip
           android_kernel_xiaomi_alioth/kernel_boot_directory.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
