--- a/.github/workflows/build-kernel-alioth.yml
+++ b/.github/workflows/build-kernel-alioth.yml
@@ -81,14 +81,14 @@ jobs:
           
           ## 特性：
           - ✅ 完整 Docker 容器支持
-          - ✅ 基于 CRDoird 15 内核源码
-          - ✅ 优化性能和稳定性
+          - ✅ 基于 (CRDoird 15)[https://github.com/LeeHe-gif/android_kernel_xiaomi_sm8250/tree/15.0-alioth]内核源码
           
           ## 刷机说明：
           1. 下载 `alioth_dockerkernel.zip`
           2. 通过 TWRP Recovery 刷入
+          3. 刷入 Magisk
           3. 重启设备
-          4. 安装 KernelSU Manager 应用管理 root 权限
+          4. 安装 Magisk 应用管理 root 权限
           
           **注意：** 刷机前请备份重要数据。
         draft: false
