--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -127,14 +127,14 @@ jobs:
           ## 特性：
           - ✅ 完整 Docker 容器支持
           - ✅ KernelSU root 权限管理
-          - ✅ 基于 Arrow OS 11 内核源码
-          - ✅ 优化性能和稳定性
+          - ✅ 基于 (Arrow OS 11)[https://github.com/LeeHe-gif/android_kernel_xiaomi_sdm845] 内核源码
           
           ## 刷机说明：
           1. 下载 `polaris_dockerkernel.zip`
           2. 通过 TWRP Recovery 刷入
+          3. 刷入Magisk
           3. 重启设备
-          4. 安装 KernelSU Manager 应用管理 root 权限
+          4. 安装 Magisk 应用管理 root 权限
           
           **注意：** 刷机前请备份重要数据。
         draft: false
