--- a/.github/workflows/build-arrowos12_1-kernel-alioth.yml
+++ b/.github/workflows/build-arrowos12_1-kernel-alioth.yml
@@ -16,7 +16,8 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y \
           curl build-essential \
-          libncurses-dev bison bc flex libssl-dev gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi \
+          libncurses-dev bison bc flex libssl-dev \
+          gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi \
           libelf-dev rsync kmod git cpio wget zip \
           unzip python3 python-is-python3 make xz-utils python3-pip ccache rsync
 
@@ -27,6 +28,19 @@ jobs:
         cd AnyKernel3
         rm -rf ramdisk anykernel.sh
         wget https://github.com/LeeHe-gif/android_kernel_xiaomi_sm8250/raw/refs/heads/15.0-alioth/AnyKernel3/anykernel.sh
+
+  
+    - name: 安装Python 2.7
+      run: |
+        cd ~
+        wget -q https://www.python.org/ftp/python/2.7.18/Python-2.7.18.tgz
+        tar -xzf Python-2.7.18.tgz
+        cd Python-2.7.18
+        ./configure --enable-optimizations
+        make -j$(nproc)
+        sudo make install
+        cd ..
+        rm -rf Python-2.7.18*
                 
     - name: Build kernel with proton-clang-13.0
       run: |
