--- a/.github/workflows/build-kernel-alioth.yml
+++ b/.github/workflows/build-kernel-alioth.yml
@@ -6,8 +6,23 @@ on:
 jobs:
   build-kernel:
     runs-on: ubuntu-latest
+    inputs:
+      branch:
+        description: "选择分支"
+        required: false
+        default: "15.0-alioth-ksu"
+        type: choice
+        options:
+          - 15.0-alioth-ksu
+          - 15.0-alioth
 
+env:
+  REPO_URL: https://github.com/LeeHe-gif/android_kernel_xiaomi_sm8250
+  REPO_BRANCH: ${{ inputs.branch }}
+  TZ: Asia/Shanghai
+  
     steps:
+
     - name: Checkout repository
       uses: actions/checkout@v4
 
@@ -22,7 +37,7 @@ jobs:
 
     - name: Clone kernel source and setup KernelSU
       run: |
-        git clone -b 15.0-alioth --depth 1 https://github.com/LeeHe-gif/android_kernel_xiaomi_sm8250.git
+        git clone --depth 1 $REPO_URL -b $REPO_BRANCH
                 
     - name: Build kernel with proton-clang-13.0
       run: |
@@ -65,6 +80,19 @@ jobs:
           android_kernel_xiaomi_sm8250/kernel_boot_directory.zip
         retention-days: 30
 
+  release:
+    needs: build-kernel
+    runs-on: ubuntu-latest
+    
+    steps:
+
+    - name: Download artifacts
+       uses: actions/download-artifact@v4
+       with:
+         name: kernel-build-artifacts
+         path: ./artifact
+
+
     - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
@@ -94,7 +122,7 @@ jobs:
         draft: false
         prerelease: false
         files: |
-          android_kernel_xiaomi_sm8250/AnyKernel3/alioth_dockerkernel.zip
-          android_kernel_xiaomi_sm8250/kernel_boot_directory.zip
+          ./artifact/alioth_dockerkernel.zip
+          ./artifact/kernel_boot_directory.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
