--- a/.github/workflows/build-CrDoird-11.10-kernel-alioth.yml
+++ b/.github/workflows/build-CrDoird-11.10-kernel-alioth.yml
@@ -98,8 +98,8 @@ jobs:
           body: |
             # alioth Docker Kernel Build
           
-            使用 proton-clang-13.0.0 编译的红米k40 crdoird15 内核
-            
+            使用 proton-clang-13.0.0 编译的红米k40 CrDoird-11.10版本内核
+            分支：$REPO_URL
             ## 包含文件：
             - `alioth_dockerkernel.zip` - AnyKernel3 刷机包
             - `kernel_boot_directory.zip` - 完整的编译输出目录
@@ -108,10 +108,10 @@ jobs:
             - ✅ 完整 Docker 容器支持
             - ✅ 基于 (CRDoird 15)[https://github.com/LeeHe-gif/android_kernel_xiaomi_sm8250/tree/15.0-alioth]内核源码
             
-            ## 刷机说明：
+            ## 刷机说明（15.0-alioth-ksu分支使用ksu，15.0-alioth分支没有ksu）：
             1. 下载 `alioth_dockerkernel.zip`
             2. 通过 TWRP Recovery 刷入
-            3. 刷入 Magisk
+            3. 刷入 Magisk（❗目前刷入面具卡会第一屏）
             3. 重启设备
             4. 安装 Magisk 应用管理 root 权限
           
