--- a/.github/workflows/build-CrDoird-11.10-kernel-alioth.yml
+++ b/.github/workflows/build-CrDoird-11.10-kernel-alioth.yml
@@ -37,6 +37,10 @@ jobs:
       - name: Clone kernel source and setup KernelSU
         run: |
           git clone --depth 1 $REPO_URL -b $REPO_BRANCH
+          if [[ "${{ inputs.branch }}" == "15.0-alioth-ksu" ]]; then
+              cd android_kernel_xiaomi_sm8250
+              curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s v0.9.5
+          fi
                 
       - name: Build kernel with proton-clang-13.0
         run: |
